examples/test/testpolicy17313.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17313
  namespace: namespace394
spec:
  podSelector:
    matchLabels:
      key26: value2
      key27: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value3
      podSelector:
        matchLabels:
          key36: value33
          key43: value17
